--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://sambit98530:5xsBEiwQVRE2Eitu@cluster0.r5td1gg.mongodb.net/
+MONGODB_URI=mongodb+srv://sambit98530:5xsBEiwQVRE2Eitu@cluster0.r5td1gg.mongodb.net/aws-deploy?retryWrites=true&w=majority
